--- a/pages/single/single.wxss
+++ b/pages/single/single.wxss
@@ -350,3 +350,49 @@
 .control-box .querySection {
   background: none;
 }
+
+.monitor-title, .data-box-title {
+  margin: 16rpx;
+  padding: 8rpx;
+  border-radius: 8rpx;
+  text-align: center;
+}
+
+.monitor-title {
+  background: #fff;
+}
+
+.monitor-title text {
+  padding: 16rpx;
+}
+
+.ttail {
+  display: flex;
+  border: 1rpx solid #eee;
+}
+
+.ttail .ttl {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8rpx;
+}
+
+.ttail .ttl {
+  font-size: 32rpx;
+  padding: 16rpx;
+}
+
+.ttr {
+  flex: 1;
+  min-height: 120rpx;
+  border-left: 1rpx solid #eee;
+}
+
+.warningDataTable .tips {
+  height: 80rpx;
+}
+
+.warningDataTable .tips button {
+  margin: 0 16rpx;
+}
